--- a/public/css/questions.css
+++ b/public/css/questions.css
@@ -134,7 +134,8 @@ body{
     border-radius: 10px;;
     background-color: rgb(192, 190, 211);
     box-shadow: 5px 5px 5px rgb(4, 4, 123);
-    
+    padding: 5px 20px;
+
 }
 
 
