--- a/public/css/home.css
+++ b/public/css/home.css
@@ -104,7 +104,7 @@ body{
     }
     .main-mid{
         width: 95%;
-        padding:0;
+/*         padding:0; */
     }
     .eachQues{
         width:93%;
