--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -40,7 +40,7 @@
             
             <% questions.forEach(question => { %>
                 
-                <a href="/question/<%= question._id %>" style="text-decoration: none; color: black;">
+                <a href="/login" style="text-decoration: none; color: black;">
                     <ul class="eachQues">
                         <h3><%= question.title %> ?</h3>
                         <h5>by <%= question.username %> </h5>
